import { create } from '@bufbuild/protobuf'
import { expect, it } from 'vitest'
import { BlockSchema, BlockType, PostContentSchema } from '@/shared/api'
import {
  POST_CONTENT_WITH_GROUPS_FIXTURE,
  POST_CONTENT_WITH_VIDEO_FIXTURE,
  POST_IMAGES_FIXTURE,
  POST_CONTENT_FIXTURE,
} from '@/test/fixtures/postContent'
import { toSite } from './convert'

it('converts every block to one standalone fixed-template page', () => {
  const output = toSite(POST_CONTENT_FIXTURE, POST_IMAGES_FIXTURE, '2026-08-29T03:04:05Z', 'ko')

  expect(output).toMatchSnapshot()
  expect(output.startsWith('<!doctype html>')).toBe(true)
  expect(output).toContain('<html lang="ko">')
  expect(output).toContain('src="IMG_1.jpg"')
  expect(output).not.toContain('api.postpilot')
  expect(output).not.toContain('r2.cloudflarestorage')
})

it('uses byte-identical style content for different posts', () => {
  const first = toSite(POST_CONTENT_FIXTURE, POST_IMAGES_FIXTURE, '2026-08-29T03:04:05Z', 'ko')
  const second = toSite(
    create(PostContentSchema, {
      title: '완전히 다른 글',
      summary: '다른 요약',
      tags: ['다름'],
      blocks: [],
    }),
    [],
    '2025-01-02T00:00:00Z',
    'ko',
  )
  const style = (value: string) => value.match(/<style>([\s\S]*?)<\/style>/)?.[1]

  expect(style(first)).toBe(style(second))
})

it('uses a URL-safe relative path for an accepted filename', () => {
  const content = create(PostContentSchema, {
    blocks: [
      create(BlockSchema, {
        type: BlockType.IMAGE,
        file: 'trip photo?#.jpg',
        alt: '사진',
      }),
    ],
  })

  expect(toSite(content, [], '2026-08-29', 'ko')).toContain('src="trip%20photo%3F%23.jpg"')
})

it('uses the concrete English content provenance in the document language', () => {
  const output = toSite(POST_CONTENT_FIXTURE, POST_IMAGES_FIXTURE, '2026-08-29', 'en')

  expect(output).toContain('<html lang="en">')
  expect(output).not.toContain('<html lang="ko">')
})

// The site export is the one format whose files sit next to the document, so its video has a
// real relative source (VIDEO-14).
it('writes a video as a figure with a relative source', () => {
  const output = toSite(POST_CONTENT_WITH_VIDEO_FIXTURE, POST_IMAGES_FIXTURE, '2026-08-28', 'ko')

  expect(output).toMatchSnapshot()
  expect(output).toContain('<video controls src="clip.mp4"></video>')
  expect(output).toContain('<figcaption>파도가 밀려온다</figcaption>')
})

// EXPORT-26: the photos in one row of their own, laid out by the fixed stylesheet, with one
// caption; the stylesheet is the same for every post.
it('writes a photo group as one figure the fixed stylesheet lays out', () => {
  const output = toSite(POST_CONTENT_WITH_GROUPS_FIXTURE, [], '2026-08-29T03:04:05Z', 'ko')
  expect(output).toMatchSnapshot()
  expect(output).toContain(
    '<figure class="gallery gallery-collage"><div class="photos"><img src="IMG_2.jpg" alt="창가"><img src="IMG_3.jpg" alt="창가"></div><figcaption>창가 자리(2층)</figcaption></figure>',
  )
  expect(output).toContain('<figure class="gallery gallery-slide"><div class="photos">')
  const plain = toSite(POST_CONTENT_FIXTURE, [], '2026-08-29T03:04:05Z', 'ko')
  expect(output.match(/<style>[\s\S]*<\/style>/)?.[0]).toBe(
    plain.match(/<style>[\s\S]*<\/style>/)?.[0],
  )
})
